# web-synth

./: .babelrc  .dockerignore  .env.example  .eslintignore  .eslintrc  .gitignore  .gitmodules  .prettierrc  Justfile  LICENSE  README.md  build_all.sh  cypress.config.ts  cypress.json  docker_build_all.sh  eslint.config.mjs  fm-synth-demo.hbs  fm.html  index.css  index.d.ts  index.hbs  index.html  opt.sh  package.json  run.sh  rustfmt.toml  svelte.config.mjs  tsconfig.json  tslint.json  vite.config.headless.mts  vite.config.mts  webpack.base.js  webpack.config.js  webpack.headless.js  webpack.prod.js
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  Rocket.toml  rustfmt.toml
backend/migrations/2019-04-15-075441_create_effects/: down.sql  up.sql
backend/migrations/2020-11-28-093218_remote-samples/: down.sql  up.sql
backend/migrations/2021-12-10-053537_looper-presets/: down.sql  up.sql
backend/migrations/2021-12-11-070844_midi_compositions_tags/: down.sql  up.sql
backend/migrations/2021-12-19-200757_composition-tags/: down.sql  up.sql
backend/migrations/2023-01-05-051515_user-login/: down.sql  up.sql
backend/migrations/2023-01-06-055732_private-sample-libraries/: down.sql  up.sql
backend/migrations/2023-01-06-085123_entity-user-ids/: down.sql  up.sql
backend/migrations/2023-01-07-030133_cascade-delete/: down.sql  up.sql
backend/migrations/2023-01-07-033850_looper-presets-user-id/: down.sql  up.sql
backend/migrations/2023-03-04-053808_wavetable-presets/: down.sql  up.sql
backend/migrations/2024-02-11-211258_subgraph-presets/: down.sql  up.sql
backend/migrations/2024-07-28-050006_composition-versions/: down.sql  up.sql
backend/migrations/2024-07-29-033710_composition-timestamps/: down.sql  up.sql
backend/migrations/2024-07-29-041349_preset-timestamps/: down.sql  up.sql
backend/migrations/2025-01-27-172738_starred-presets/: down.sql  up.sql
backend/src/: conf.rs  db_util.rs  main.rs  schema.rs
backend/src/db_util/: login.rs  mod.rs  private_sample_libraries.rs
backend/src/models/: compositions.rs  effect.rs  effects.rs  looper_preset.rs  midi_composition.rs  mod.rs  private_sample_libraries.rs  remote_samples.rs  subgraph_presets.rs  synth_preset.rs  tags.rs  user.rs  waveform.rs  wavetable_preset.rs
backend/src/routes/: login.rs  looper_preset.rs  midi_composition.rs  mod.rs  remote_samples.rs  subgraph_preset.rs  wavetable_preset.rs
engine/: .gitignore  Cargo.toml  build.sh  clippy.toml  release.sh  rustfmt.toml
engine/.cargo/: config.toml
engine/adsr/: Cargo.toml
engine/adsr/src/: exports.rs  lib.rs  managed_adsr.rs
engine/adsr/src/tests/: mod.rs  render.rs
engine/canvas_utils/: Cargo.toml
engine/canvas_utils/src/: lib.rs
engine/common/: Cargo.toml  README.txt
engine/common/src/: init.rs  lib.rs
engine/compressor/: Cargo.toml
engine/compressor/src/: lib.rs
engine/delay/: Cargo.toml
engine/delay/src/: lib.rs
engine/distortion/: Cargo.toml
engine/distortion/src/: lib.rs
engine/dsp/: Cargo.toml
engine/dsp/src/: band_splitter.rs  circular_buffer.rs  lib.rs  lookup_tables.rs  oscillator.rs  rms_level_detector.rs
engine/dsp/src/filters/: biquad.rs  butterworth.rs  dc_blocker.rs  dynabandpass.rs  filter_chain.rs  mod.rs
engine/engine/: Cargo.toml
engine/engine/src/: constants.rs  input_handlers.rs  js.rs  lib.rs  prelude.rs  util.rs
engine/engine/static/: flanger.dsp  rain.dsp
engine/engine/tests/: skip_list.rs
engine/equalizer/: Cargo.toml
engine/equalizer/src/: lib.rs
engine/event_scheduler/: Cargo.toml
engine/event_scheduler/src/: lib.rs
engine/filter_viz/: Cargo.toml
engine/filter_viz/src/: lib.rs
engine/granular/: Cargo.toml
engine/granular/src/: lib.rs  sample_recorder.rs
engine/level_detector/: Cargo.toml
engine/level_detector/src/: lib.rs
engine/lfo/: Cargo.toml
engine/lfo/src/: lib.rs
engine/libs/common/: Cargo.toml
engine/libs/midi/: Cargo.toml
engine/libs/polysynth/: Cargo.toml
engine/libs/spectrum_viz/: Cargo.toml  build.rs
engine/looper/: Cargo.toml
engine/looper/src/: lib.rs
engine/midi/: Cargo.toml
engine/midi/src/: lib.rs  streaming.rs
engine/midi_quantizer/: Cargo.toml
engine/midi_quantizer/src/: lib.rs
engine/midi_renderer/: Cargo.toml
engine/midi_renderer/src/: conf.rs  lib.rs
engine/multiband_diode_ladder_distortion/: Cargo.toml
engine/multiband_diode_ladder_distortion/src/: lib.rs
engine/noise_gen/: Cargo.toml
engine/noise_gen/src/: lib.rs
engine/note_container/: Cargo.toml
engine/note_container/src/: exports.rs  lib.rs  note_container.rs  note_lines.rs
engine/oscilloscope/: Cargo.toml
engine/oscilloscope/src/: conf.rs  f0_estimation.rs  lib.rs  oscilloscope.rs
engine/polysynth/: Cargo.toml
engine/polysynth/src/: lib.rs
engine/quantizer/: Cargo.toml
engine/quantizer/src/: lib.rs
engine/safety_limiter/: Cargo.toml
engine/safety_limiter/src/: lib.rs
engine/sample_editor/: Cargo.toml
engine/sample_editor/src/: lib.rs
engine/sample_player/: Cargo.toml
engine/sample_player/src/: lib.rs
engine/sampler/: Cargo.toml
engine/sampler/src/: lib.rs
engine/sidechain/: Cargo.toml
engine/sidechain/src/: lib.rs
engine/spectrum_viz/: .gitignore  Cargo.toml  build.rs
engine/spectrum_viz/src/: lib.rs
engine/src/: constants.rs  input_handlers.rs  js.rs  lib.rs  note_box.rs  note_utils.rs  prelude.rs  render.rs  selection_box.rs  skip_list.rs  synth.rs  util.rs
engine/src/state/: mod.rs  note_box.rs
engine/src/view_context/: manager.rs  mod.rs
engine/src/views/: mod.rs
engine/tests/: selection_box.rs  skip_list.rs
engine/vocoder/: Cargo.toml
engine/vocoder/src/: lib.rs
engine/wav_decoder/: Cargo.toml
engine/wav_decoder/src/: lib.rs
engine/waveform_renderer/: Cargo.toml
engine/waveform_renderer/src/: lib.rs
engine/wavegen/: Cargo.toml
engine/wavegen/src/: bindings.rs  lib.rs
engine/wavetable/: .gitignore  Cargo.toml  build.rs
engine/wavetable/src/: fm.rs  lib.rs  lookup_tables.rs
engine/wbg_logging/: Cargo.toml
engine/wbg_logging/src/: lib.rs
(+854 files in other folders)
