[package]
name = "web-synth-backend"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"

diesel = { version = "1.4.5", features = ["mysql", "chrono"] }

hex = "0.4"

itertools = "0.10"

lazy_static = "1.4.0"

chrono = "0.4.19"
log = "0.4.11"
hound = "3.4"

reqwest = { version = "0.11", features = ["gzip", "brotli"] }

rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_mysql_pool"] }
rocket_async_compression = "0.2.0"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

sha2 = "0.10"

tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }

scrypt = "0.10.0"
base64 = "0.20.0"
