[package]
name = "web-synth-backend"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2021"

# enable debug info in release mode
[profile.release]
debug = true

[dependencies]
dotenv = "0.15.0"

diesel = { version = "2.2", features = ["mysql", "chrono"] }

hex = "0.4"

fxhash = "0.2"

itertools = "0.13"

lazy_static = "1.4.0"

chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.11"
hound = "3.4"

reqwest = { version = "0.12", features = ["gzip", "brotli"] }

rocket = { version = "0.5", features = ["json"] }
rocket_sync_db_pools = { version = "0.1", features = ["diesel_mysql_pool"] }
rocket_async_compression = "0.6.0"

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

sha2 = "0.10"

uuid = { version = "1.0", features = ["serde"] }

tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }

scrypt = "0.11.0"
base64 = "0.22"

rust-s3 = { version = "0.35", features = [] }
aws-region = { version = "0.25.0", features = ["serde"] }
urlencoding = "2.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
