[workspace]
members = [
  "engine",
  "common",
  "midi",
  "polysynth",
  "spectrum_viz",
  "wavetable",
  "waveform_renderer",
  "granular",
  "event_scheduler",
  "sidechain",
  "noise_gen",
  "distortion"
]

[profile.release]
debug-assertions = true
panic = "abort"
debug = true
codegen-units = 1
lto = "fat"

[profile.dev]
# debug-assertions = false
