[workspace]
members = [
  "engine",
  "common",
  "midi",
  "polysynth",
  "spectrum_viz",
  "wavetable",
  "waveform_renderer",
  "granular",
  "event_scheduler",
  "sidechain",
  "noise_gen",
  "distortion",
  "adsr",
  "note_container",
  "sample_editor",
  "delay",
  "sample_player",
  "wav_decoder",
  "looper",
  "midi_quantizer",
  "quantizer",
  "wbg_logging",
  "compressor"
]

[profile.release]
#debug-assertions = true
panic = "abort"
debug = 1
codegen-units = 1
lto = "fat"

[profile.dev]
debug-assertions = true
