[package]
name = "common"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[features]
bindgen = ["wasm-bindgen", "log", "wasm-logger", "console_error_panic_hook", "serde", "serde_derive"]
default = ["bindgen"]

[dependencies]
serde = { version = "1.0.114", optional = true }
serde_derive = { version = "1.0.114", optional = true }
uuid = { version = "0.8", features = ["serde"] }
rand = "0.7.3"
rand_pcg = "0.2.1"
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = ["release_max_level_off"], optional = true }
wasm-bindgen = { version = "=0.2.78", features = ["nightly"], optional = true }
