[package]
name = "delay"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { version = "0.4", features = ["release_max_level_off"] }
common = { path = "../common", optional = true }
dsp = { path = "../dsp" }
