[package]
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"
name = "engine"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "=0.2.82" }
rand = "0.7"
rand_pcg = "0.2.1"
miniserde = "0.1.16"
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = ["release_max_level_off"] }
uuid = { version = "1.2" }

common = { path = "../common" }
wbg_logging = { path = "../wbg_logging" }
