[package]
name = "lfo"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dsp = { path = "../dsp" }
common = { path = "../common", default-features = false, features = [] }
wavetable = { path = "../wavetable", default-features = false, features = [] }
