[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "midi"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.2"
console_error_panic_hook = "0.1.6"
futures = "0.3"
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = ["release_max_level_off"] }
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.45"
js-sys = "0.3.35"
wasm-bindgen = "=0.2.58"
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4.8"

polysynth = { path = "../polysynth" }

[dependencies.common]
path = "../common"

[dependencies.rimd]
git = "https://github.com/Ameobea/rimd.git"
