[package]
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"
name = "midi"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
futures = "0.3"
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = ["release_max_level_off"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
js-sys = "0.3"
wasm-bindgen = "=0.2.78"
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"

polysynth = { path = "../polysynth" }

[dependencies.common]
path = "../common"

[dependencies.rimd]
git = "https://github.com/Ameobea/rimd.git"
# path = "/home/casey/rimd"
