[package]
name = "note_container"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.92"
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = [] }
common = { path = "../common" }
wbg_logging = { path = "../wbg_logging" }
float-ord = "0.3"
js-sys = "0.3"
fxhash = "0.2"
