[package]
name = "polysynth"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = [] }
uuid = { version = "1.2" }
wasm-bindgen = { version = "=0.2.92", optional = true }
common = { path = "../common" }
wbg_logging = { path = "../wbg_logging", optional = true }
js-sys = "^0.3.36"

[features]
default = ["wasm-bindgen-exports"]
wasm-bindgen-exports = ["wasm-bindgen", "wbg_logging"]
