[package]
name = "spectrum_viz"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
palette = "0.5"
wasm-bindgen = "=0.2.59"
wasm-logger = "0.2.0"
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = ["release_max_level_off"] }
console_error_panic_hook = "0.1.6"
# wee_alloc = "0.4.5"
common = { path = "../common" }

[build-dependencies]
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
