[package]
name = "spectrum_viz"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
palette = "0.5"
wasm-bindgen = "=0.2.82"
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = ["release_max_level_off"] }
common = { path = "../common" }
wbg_logging = { path = "../wbg_logging" }

[build-dependencies]
miniserde = "0.1.16"
