[package]
name = "wav_decoder"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.78"
hound = "3.4"
common = { path = "../common" }
log = { version = "0.4", features = ["release_max_level_off"] }
