[package]
name = "wav_decoder"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.92"
hound = "3.4"
common = { path = "../common" }
wbg_logging = { path = "../wbg_logging" }
log = { version = "0.4", features = [] }
