[package]
name = "waveform_renderer"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "=0.2.82", optional = true }
common = { path = "../common", default_features = false, features = [] }
wbg_logging = { path = "../wbg_logging", optional = true }
log = { version = "0.4", features = ["release_max_level_off"] }

[features]
bindgen = ["wasm-bindgen", "common/bindgen", "wbg_logging"]
default = ["bindgen"]
