[package]
name = "wavegen"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustfft = "6.1"
wasm-bindgen = { version = "=0.2.82", optional = true }
waveform_renderer = { path = "../waveform_renderer", default-features = false, features = [] }
console_error_panic_hook = "0.1.6"
fastapprox = "0.3"

[dev-dependencies]
textplots = "0.8"

[features]
bindgen = ["wasm-bindgen"]
default = ["bindgen"]
