[package]
name = "wavetable"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dsp = { path = "../dsp" }
fastapprox = "0.3"
core_arch = { git = "git://git@github.com/rust-lang/stdarch", optional = true }

[features]
default = ["simd"]
simd = ["core_arch"]
