[package]
name = "wavetable"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
adsr = { path = "../adsr" }
dsp = { path = "../dsp" }
fastapprox = "0.3"
common = { path = "../common" }
compressor = { path = "../compressor" }
polysynth = { path = "../polysynth", default-features = false }
rand = "0.7"

[features]
default = []
simd = []
