[package]
name = "wbg_logging"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.6"
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = [] }
wasm-bindgen = { version = "=0.2.92" }
wasm-logger = "0.2"
