[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "midi"
version = "0.1.0"

[dependencies]
bincode = "1.1.4"
console_error_panic_hook = { git = "https://github.com/Ameobea/console_error_panic_hook.git" }
futures = "0.1.28"
log = "0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.39"
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "fb0bbc00" }
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "fb0bbc00" }
wasm-logger = { git = "https://gitlab.com/Ameobea/wasm-logger.git" }
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "fb0bbc00" }

[dependencies.common]
path = "../common"

[dependencies.rimd]
git = "https://github.com/Ameobea/rimd.git"

[lib]
crate-type = ["cdylib", "rlib"]
