[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "midi"
version = "0.1.0"

[dependencies]
bincode = "1.2"
console_error_panic_hook = "0.1.6"
futures = "0.3"
log = "0.4"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
js-sys = "0.3.13"
wasm-bindgen = "0.2.54"
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4.4"

polysynth = { path = "../polysynth" }

[dependencies.common]
path = "../common"

[dependencies.rimd]
git = "https://github.com/Ameobea/rimd.git"

[lib]
crate-type = ["cdylib", "rlib"]
