[package]
name = "polysynth"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
uuid = { version = "0.8", features = ["serde"] }

[profile.dev]
opt-level = 1
debug-assertions = true

[profile.release]
opt-level = 3
debug-assertions = false
codegen-units = 1
