[package]
name = "polysynth"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Disable logging staticly in release, making all log calls into no-ops
log = { version = "0.4", features = ["release_max_level_off"] }
uuid = { version = "0.8", features = ["serde"] }
wasm-bindgen = { version = "0.2.54", optional = true }
wasm-logger = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4.4", optional = true }
common = { path = "../common", optional = true }
js-sys = "0.3.31"

[features]
wasm-bindgen-exports = ["wasm-bindgen", "wasm-logger", "wasm-bindgen-futures", "common"]

[profile.dev]
opt-level = 1
debug-assertions = true
debug = true

[profile.release]
opt-level = 3
debug-assertions = false
codegen-units = 1
panic = "abort"
debug = false
