[package]
name = "spectrum_viz"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4.0"
palette = "0.4.1"
wasm-bindgen = "0.2.54"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
wasm-logger = "0.2.0"
log = "0.4"
console_error_panic_hook = "0.1.6"
